...
            BackgroundGradientView(start: gradientStart, end: gradientEnd)
                .ignoresSafeArea()
            
            BackgroundCirclesView()
            
            VStack {
                HeaderView(imageName: "arrow.left.arrow.right.circle.fill", headerText: "Add Substitution Event", subheaderText: "Enter the details of the substitution below.")
                    .padding(.top, 60)
                
                Spacer()
                
                ScrollView {
                GlassMorphicCard {
...
